--- a/assignments/lesson-5/lesson-5 copy/CSSL5/small.css
+++ b/assignments/lesson-5/lesson-5 copy/CSSL5/small.css
@@ -31,5 +31,10 @@ main figure { margin: 0 0 .2rem 2%; width:96%; }
 main figure img { }
 
 /* 10-day forecast details should be set to "display:none;" in the small CSS view. */
+.forecast {
+
+     display: none;
+
+}
 
 footer {}
