--- a/assignments/lesson-7/CSSL7/small.css
+++ b/assignments/lesson-7/CSSL7/small.css
@@ -5,11 +5,11 @@ html {-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%;}
 
 body {
   font-size: 16px;
-  ____________  /* Declare the base font-family */
+  font-family: Verdana, sans-serif;  /* Declare the base font-family */
 }
 
 header, nav, main, footer { /* the comma between the selectors means apply the following CSS declarations to all of the listed elements */
-  max-width: ______; /* Declare the maximum width and other main element rules to limit the stretch on larger/wider views */
+  max-width: 100%; /* Declare the maximum width and other main element rules to limit the stretch on larger/wider views */
 }
 
 header {}
