--- a/assignments/lesson-10/StormCenter/CSSL10/large.css
+++ b/assignments/lesson-10/StormCenter/CSSL10/large.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 64rem) {
+@media only screen and (min-width: 64rem) {
     
      nav button { display:none; }  /* hamburger button does not need to be shown in the medium on up views */
     
