--- a/assignments/lesson-10/StormCenter/CSSL10/medium.css
+++ b/assignments/lesson-10/StormCenter/CSSL10/medium.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 35em) {
+@media only screen and (min-width: 35em) {
 
     /* Only CSS write declarations that need to be changed. Do not duplicated declarations that are already established in the main.css */
     
