--- a/assignments/lesson-12/CSS/small.css
+++ b/assignments/lesson-12/CSS/small.css
@@ -115,7 +115,7 @@ form label.top input, form label.top select {
     font-size: 1rem;
     border: solid 1px #F09900;
     border-radius: 4px;
-    color: #FFF000;
+    color: #236600;
     width: 100%;
     max-width: 20rem;
     background-color: rgba(0,0,0,0.1);
