--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,7 @@ h1 {
 img {
   float: right;
   Width: 240px;
+  height: 250px;
   margin-top: 38px;
   margin-right: 15px;
   box-shadow: 10px 10px 10px grey;
