--- a/css/small.css
+++ b/css/small.css
@@ -22,7 +22,13 @@ text-align: center;
 
 h1 {
   font-family: 'Cabin Condensed', sans-serif;
-  font-size: 50px;
+  font-size: 1.5px;
+}
+
+h2 {
+  font-size: 1rem;
+  border-bottom: 1px solid #999;
+  margin-bottom: 0.5rem;
 }
 
 img {
