--- a/css/medium.css
+++ b/css/medium.css
@@ -10,9 +10,15 @@ section {margin: 10px auto;width: 400px;border:1px solid #bbb;background-color:#
         font-size: 1.5rem;
     }
 
-}
+    header, footer {
+        border-radius: 10px;
+      }
 
-@media (min-width: 64em) {
-
+      img {
+       box-shadow: 0 0 30px #444;
+       float: right;
+       border-radius: 0 10px 0 0;
+          }
+      
 
 }
