--- a/css/medium.css
+++ b/css/medium.css
@@ -15,6 +15,7 @@ section {margin: 10px auto;width: 400px;border:1px solid #bbb;background-color:#
       }
 
       img {
+       float: right;
        box-shadow: 0 0 30px #444;
        float: right;
        border-radius: 0 10px 0 0;
