--- a/css/small.css
+++ b/css/small.css
@@ -32,8 +32,8 @@ h2 {
 }
 
 img {
-  Width: 240px;
-  height: 250px;
+  width: "200"; 
+  height: "273";
   margin-top: 38px;
   margin-right: 15px;
   box-shadow: 10px 10px 10px grey;
