--- a/css/small.css
+++ b/css/small.css
@@ -33,8 +33,8 @@ h2 {
 }
 
 img {
-  width: "200"; 
-  height: "273";
+  width: 200px; 
+  height: auto;
   margin-top: 38px;
   margin-right: 15px;
   box-shadow: 10px 10px 10px grey;
