--- a/css/medium.css
+++ b/css/medium.css
@@ -1,11 +1,7 @@
-@media (min-width: 480px) {
-
-h2 {color: blue; margin:0;border-bottom:1px dashed #999;}
-section {margin: 10px auto;width: 400px;border:1px solid #bbb;background-color:#eee; padding: 7px;}
-
 @media only screen and (min-width: 32.5em) {
     h1 {
         font-size: 2.5rem;
+        margin: auto;
       }
 
     h2 {
@@ -16,10 +12,9 @@ section {margin: 10px auto;width: 400px;border:1px solid #bbb;background-color:#
         border-radius: 10px;
       }
 
-      img {
-        width: 200px; 
-        height: auto;
+     header img {
        float: right;
+       border-radius: 5px;
+       box-shadow: 10px 10px 10px grey;
           }
         }
-}
