--- a/lesson2/css/medium.css
+++ b/lesson2/css/medium.css
@@ -1,6 +1,6 @@
 @media only screen and (min-width: 32.5em) {
     main {
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: auto auto;
     }
 
     section {
