--- a/lesson2/css/small.css
+++ b/lesson2/css/small.css
@@ -5,58 +5,59 @@
 }
 
 body {
-    font-size: 16px;
-    line-height: 32px;
-    font-family: sans-serif;
-    color: #000000;
+        font-family: sans-serif;
+        font-size: 18px;
+        line-height: 1.5;
+        color: red;
 }
 
 main {
     display: grid;
-    grid-template-columns: 1fr;
-    max-width: 66em;
+    grid-template-columns: auto;
+    max-width: 60em;
+    text-align: center;
     margin: 1.25rem auto;
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'Roboto Mono', monospace;
+    font-family: 'Roboto', sans-serif;
 }
 
 header, footer {
     font-size: 1rem;
-    color: whitesmoke;
-    background-color: darkred;
+    color: white;
+    background-color: red;
     margin: 1.25rem auto;
-    max-width: 66em;
-    border-radius: 8px;
+    max-width: 60em;
+    border-radius: 10px;
     text-align: center;
 }
 
 h3 {
-    background-color: gray;
+    background-color: darkred;
 }
 
 section {
-    background-color: lightsteelblue;
-    border-radius: 8px;
+    background-color: lightgrey;
+    border-radius: 10px;
     max-width: 20em;
-    text-align: left;
-    border: 1px solid #333;
-    box-shadow: 0 0 10px #000;
+    text-align: center;
+    border: 1px solid darkslategrey;
+    box-shadow: 0 0 10px black;
     margin: 1rem auto;
 }
 
 img {
     max-width: 100%;
-    margin-top: 1em;
-    margin-right: 1em;
+    margin-top: auto;
+    margin-right: auto;
 }
 
 
 footer a {
-    color:skyblue;
+    color:lightcoral;
 }
 
 #lastUpdated {
-    color: gold;
+    color: blue;
 }
