--- a/lesson2/css/small.css
+++ b/lesson2/css/small.css
@@ -53,6 +53,13 @@ img {
     margin-right: auto;
 }
 
+.links {
+    background-color: pink;
+    color: navy;
+    padding: 4px 15px;
+    border-radius: 40px;
+}
+
 
 footer a {
     color:lightcoral;
