--- a/WDDAssignments/Assignment3/css/small.css
+++ b/WDDAssignments/Assignment3/css/small.css
@@ -52,10 +52,11 @@ nav ul li {
 }
 nav ul li a {
     display: block;
-    padding: .8rem 2%;
+    padding: .8rem;
     text-decoration: none;
-    color: red;
+    color: rgb(43, 43, 247);
     border-top:1px solid rgba(0,0,0,0.3);
+    text-align: center;
 }
 nav ul li.active a {background-color: rgba(0,0,0,0.2); color: #fff;
     
