--- a/WDDAssignments/lesson5/css/small.css
+++ b/WDDAssignments/lesson5/css/small.css
@@ -45,6 +45,26 @@ main {
    margin: 6px auto;
 }
 
+.townimg {
+    margin: 10px auto;
+    position: relative;
+    border: 1px #333;
+    width: 100%;
+    height: 250px;
+}
+
+.weatherSum {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    background: radial-gradient(#eee, #4567aa);
+    border: 1px solid #000;
+    padding: 1.5rem;
+    box-shadow: 0 0 30px #111;
+    opacity: .8;
+}
+
+
 nav button {
     margin: .2rem 2%;
     background-color: transparent;
