--- a/WDDAssignments/lesson5 copy/css/medium.css
+++ b/WDDAssignments/lesson5 copy/css/medium.css
@@ -1,11 +1,25 @@
 @media only screen and (min-width: 35em) {
 
     /* Only CSS write declarations that need to be changed. Do not duplicated declarations that are already established in the main.css */
-    nav {
-        display: flex;
-        justify-content: space-between;
-        flex-direction: column;
+    
+    header img {
+        width: 100%;
     }
+
+    .headings h1 {
+        font-size: 2rem;
+    }
+
+    .slogan {
+        letter-spacing: 1.5pt;
+        font-size: 1.5rem;
+        margin-left: 50px;
+    }
+
+    .navigation {
+        display: flex;
+    }
+
     nav button { display:none; }  /* hamburger button does not need to be shown in the medium on up views */
     
     nav ul.hide {display: block;}
@@ -14,5 +28,4 @@
         float: left;
     }
     nav ul li a {border: none;}
-    
 }
