--- a/WDDAssignments/lesson5 copy/css/small.css
+++ b/WDDAssignments/lesson5 copy/css/small.css
@@ -3,47 +3,110 @@ html {-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%;}
 * { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;}  /* This wildcard applies to all elements ensuring a box layout model */
 
 body {
-  font-size: 16px;
-  font-family: Verdana, sans-serif;  /* Declare the base font-family */
+  background-color: azure;
+  padding: 0;
+  margin: 0;
 }
 
-header {
-    padding: .5rem 2%;
+header {    
     background-color: azure;
+    padding: 10px 0;
     display: flex;
     align-items: center;
     justify-content: center;
+    font-family: "roboto", sans-serif;
+    width: 100%;
 }
 
 header img {
-    width: auto;
+    width: 125px;
+    height: auto;
+    }
+
+.headings {
+    display: flex;
+    flex-direction: column;
+}
+
+.headings h1 {
+    font-family: Verdana, sans-serif;
+    font-weight: bold;
+    font-size: 2rem;
+    margin: 0 0 0 17px;
+    color: rgb(17, 17, 155);
+}
+
+.slogan {
+    font-style: italic;
+    color: rgb(17, 17, 155);
+    letter-spacing: 0.5pt;
+    margin-left: 30px;
+    font-size: 1.5rem;
+}
+
+nav {
+    font-family: Verdana, sans-serif;
+    margin: -15px auto;
+    background-color: rgb(26, 250, 26);
+}
+
+nav button {
+    margin: -15px auto;
+    background-color: transparent;
+}
+
+.navigation {
+    list-style: none;
+    padding: 0;
+}
+
+.navigation li:first-child {
+    display: block;
+  }
+  
+  .navigation a {
+    display: block;
+    color: rgb(17, 17, 155);
+    padding: 0.75rem;
+    text-align: center;
+    text-decoration: none;
+    font-family: "Verdana", sans-serif;
+    font-size: 1.3rem;
+  }
+
+  .navigation a:hover {
+    color: rgb(17, 17, 155);
+    background-color: rgb(26, 223, 26);
+    font-weight: 900;
+  }
+
+  .responsive li {
+    display: block;
+  }
+
+h2 {
+    color: rgb(17, 17, 155);
+    font-family: Roboto, sans-serif;
+    text-align: center;
+    font-size: 1.75rem;
+    font-weight: 400;
+    margin: 50px 0 0 0;
+}
+
+.imgcontainer {
+    position: relaxive;
+    width: 80%;
+    margin: 10px auto;
+}
+
+.imgcontainer img {
+    width: 100%;
     height: auto;
 }
 
-h1 {
-    font-family: Verdana, sans-serif;
-    margin: 0;
-    margin-left: 15px;
-    font-weight: 300;
-    font-size: 2rem;
-    margin: auto;
-}
-header .subheading {
-    font-weight: normal;
-    text-align: center;
-}
 
-h2 {
-    text-align: center;
-    font-weight: 400;
-}
 
-main {
-    max-width: auto;
-    display: block;
-    padding: 6px;
-   margin: 6px auto;
-}
+
 
 .townimg {
     margin: 10px auto;
@@ -54,162 +117,116 @@ main {
 }
 
 .weatherSum {
+    color: rgb(17, 17, 155);
     position: absolute;
-    top: 10px;
-    left: 10px;
+    top: 3rem;
+    left: 3rem;
+    font-family: "verdana", sans-serif;
     background: radial-gradient(#eee, #4567aa);
     border: 1px solid #000;
-    padding: 1.5rem;
+    padding: 1rem;
     box-shadow: 0 0 30px #111;
     opacity: .8;
 }
 
-
-nav button {
-    margin: -15px auto;
-    background-color: transparent;
+h3 {
+    border-bottom: 2px solid #4567aa;
 }
 
-nav {
-    background-color: rgb(26, 250, 26);
-    font-family: Verdana, sans-serif;
-    text-align: center;
-    margin: -15px auto;
+.fiveDayForecast {
+    margin: 24px;
 }
 
-nav ul {
+.forecast {
     display: flex;
-    flex: 1 1 100%;
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-    overflow: hidden;
-    align-items: center;
+    flex-direction: row;
+    width: 70%;
+    border-right: 1px solid #000;
+    background-color: azure;
+    margin: 0px auto;
 }
 
-nav ul li {
-    border-right:1px solid rgb(40, 165, 40);
-}
-
-nav ul li a {
-    display: block;
-    padding: .8rem;
-    text-decoration: none;
-    color: rgb(43, 43, 247);
-    border-top:1px solid rgba(0,0,0,0.3);
+.flex-col{
+    flex: 1 1 auto;
+    background-color: rgb(17, 17, 155);
+    border-bottom: 1px solid #333;
+    border-left: 1px solid #333;
     text-align: center;
-    font-size: 1.2rem;
-}
-nav ul li.active a {
-    background-color: rgba(0,0,0,0.2); 
-    color: #fff;
-    
 }
 
-nav ul li a:hover {
-    background-color: rgba(0,0,0,0.4);
-    font-weight: 700;
+.Day {
+    display: block;
+    background-color: #4567aa;
+    padding: 5px;
+    border-bottom: 1px solid #333;
+    border-top: 1px solid #333;
+    text-align: center;
 }
 
-nav ul.hide {display: none;}
-
-.clearfix:after {
-    content: "";
-    display: table;
-    clear: both;
-  }
-
-
-
-
-.contentLinks {
-    background-color: rgb(26, 250, 26);
-    padding:.6rem;
-    margin: 2rem;
+.temp {
+    display: block;
+    padding: 0 5px 5px;
 }
+
 
 .contentbox {
-    border: 1px dashed green;
-    padding: .6rem;
+    padding: .5rem;
     margin: 6px;
-    background-color: rgb(9, 207, 9)
+    background-color: rgb(9, 207, 9);
     
 }
 
-main figure { margin: 0 0 .2rem 2%; width:96%; }
-main figure.myphoto {
-    width: 50%;
-    border: 1px blue dashed;
-}
-main figure.myphoto img {width: 100%;}
-main figure.myphoto img {text-align: center; font-size: .75rem;}
-
-/* 10-day forecast details should be set to "display:none;" in the small CSS view. */
-.forecast {
-
-     display: none;
-
+.article {
+    width: 75%;
+    margin: 50px auto;
+    font-family: "verdana", sans-serif;
+    color: rgb(17, 17, 155);
+    background-color: azure;
+    border: 1px solid rgb(17, 17, 155);
+    padding: 0 20px;
 }
 
-
-form fieldset {
-    margin: 2rem 0;
-    border: 1px solid #445ba9;
-    border-radius: 10px;
-    padding: .5rem 2%;
-    
-}
-form legend {
-    color: #445ba9;
-    margin: 0 1rem;
-    padding: 0 .5rem;
-}
-
-form.label.top, form div {
+p img {
     display: block;
-    padding-top: 1rem;
-    color:red;
-    font-size: .8rem;
+    width: 10px auto;
+    width: 350px;
+    height:350px;
+    border:1px solid rgb(17, 17, 155);
+    border-radius: 5px;
+    box-shadow: 0 0 20px #333;
 }
-form label.top input, form label.top select {
-   -webkit-appearance:none;
-    display: block;
-    font-size: 1rem;
-    border: solid 1px #999;
+
+.map {
+    margin: 10px auto;
+    border: 1px solid rgb(17, 17, 155);
+    padding: 15px;
+    background-color:rgb(17, 17, 155);
+    color: rgb(26, 250, 26);
+    font-family: "verdana", sans-serif;
+    width: 75%;
+    text-align: center;
+}
+
+.contact {
+    grid-column: 1/3;
+    margin: 10px auto;
+    font-size: 1.3rem;
+}
+
+.icon {
+    width: 40px;
+    height: 40px;
     border-radius: 4px;
-    color: #555;
-    width: 100%;
-    max-width: 20rem;
-    background-color: rgba(0,0,0,0.1);
+    margin-top: 15px;
 }
-
-form input.submitBtn {
-    border: none;
-    background-color: #9c2c13;
-    color: white;
-    border-radius: 1rem;
-    padding: .75rem 1.5rem;
-    margin: 0 0 2rem 2%;
-    width: 96%;
-    max-width: 20rem;
-}
-form label.top input:required {
-    
-border-left:blue solid 6px;
-}
-form label.top input:required:valid {
-    border-left: green solid 6px
-} 
-
 
 
 footer {
-   display: block;
-   padding: 6px;
-    bottom: 0;
-    width: 100%;
-    margin: 6px auto;
-    background-color: blue;
-    color: white;
+    background-color: rgb(17, 17, 155);
+    color:  rgb(9, 207, 9);
+    margin: 15px auto;
+    padding: 5px;
+    max-width: 860px, 90%;
+    font-family: "Verdana", sans-serif;
     text-align: center;
 }
