--- a/WDDAssignments/lesson5final/css/small.css
+++ b/WDDAssignments/lesson5final/css/small.css
@@ -117,11 +117,12 @@ h2 {
 }
 
 .weatherSum {
-    color: rgb(17, 17, 155);
-    position: absolute;
-    top: 3rem;
+    color: rgb(0, 0, 0);
+    position: relative;
+    top: 5rem;
     left: 3rem;
     font-family: "verdana", sans-serif;
+    font-size: 1.2rem;
     background: radial-gradient(#eee, #4567aa);
     border: 1px solid #000;
     padding: 1rem;
@@ -172,8 +173,7 @@ h3 {
 .contentbox {
     padding: .5rem;
     margin: 6px;
-    background-color: rgb(9, 207, 9);
-    
+    background: radial-gradient(#eee, #4567aa);    
 }
 
 .article {
