--- a/WDDAssignments/lesson5final/css/small.css
+++ b/WDDAssignments/lesson5final/css/small.css
@@ -153,6 +153,7 @@ h3 {
     border-bottom: 1px solid #333;
     border-left: 1px solid #333;
     text-align: center;
+    color: rgb(26, 223, 26);
 }
 
 .Day {
