--- a/WDDAssignments/lesson6/css/small.css
+++ b/WDDAssignments/lesson6/css/small.css
@@ -32,7 +32,7 @@ header img {
     font-family: Verdana, sans-serif;
     font-weight: bold;
     font-size: 2rem;
-    margin: 0 0 0 17px;
+    margin: 0 0 0 15px;
     color: rgb(17, 17, 155);
 }
 
@@ -42,6 +42,15 @@ header img {
     letter-spacing: 0.5pt;
     margin-left: 30px;
     font-size: 1.5rem;
+}
+
+#plannedEvent {    
+    color: rgb(26, 250, 26);
+    background-color: rgb(17, 17, 155);
+    font-size: 1.50rem;
+    padding: 8px;
+    text-align: center;
+    font-family: Verdana, sans-serif;
 }
 
 nav {
@@ -61,7 +70,8 @@ nav button {
 
 }
 
-.hide {display: none;
+.navigation li {
+    display: block;
 }
 
 .navigation li:first-child {
@@ -107,10 +117,6 @@ h2 {
     width: 100%;
     height: auto;
 }
-
-
-
-
 
 .townimg {
     margin: 10px auto;
