--- a/WDDAssignments/lesson8/css/small08.css
+++ b/WDDAssignments/lesson8/css/small08.css
@@ -80,7 +80,7 @@ main figure.myphoto {
     width: 50%;
     border: 1px red dashed;
 }
-main figure.myphoto img {width 100%;}
+main figure.myphoto img {width: 100%;}
 main figure.myphoto img { text-align: center; font-size: .75rem;}
 
 /* 10-day forecast details should be set to "display:none;" in the small CSS view. */
