--- a/WDDAssignments/lesson9/css/prophets.css
+++ b/WDDAssignments/lesson9/css/prophets.css
@@ -9,16 +9,16 @@ header {
 
 .cards {
     display: grid;
-    grid-gap: 4.5px;
-    grid-auto-columns: auto;
+    grid-gap: 5px;
+    grid-template-columns: repeat(1, 1fr);
     justify-content: center;
     max-width: 1200px;
     margin: 1rem auto;
-    border: 18px solid rgb(231, 228, 228);
+    border: 15px solid rgb(22, 22, 222);
     box-shadow: 0px 0px 26px 1px rgb(119, 115, 115);
     border-radius: 5px;
-    background-color: rgb(228, 228, 228);
-    font-family: 'Bree Serif', serif;
+    background-color: rgb(22, 22, 222);
+    font-family: 'Paprika Serif', serif;
     
 }
 
@@ -28,7 +28,7 @@ section {
     justify-content: center;
     background-color: rgb(22, 22, 222);
     line-height: 0px;
-    border: 1.4px solid rgb(69, 206, 15);
+    border: 1.5px solid rgb(69, 206, 15);
 }
 
 h2,
@@ -44,17 +44,18 @@ h2 {
 
 img {
     max-width: 50%;
+    border: 2px solid  rgb(69, 206, 15);
     box-shadow: 0px 0px 16px 0px rgb(51, 49, 49);
     margin: 1rem 0px 2rem 0px;
 }
 
 p {
     line-height: 0px;
-    color: black;
+    color: rgb(69, 206, 15);
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
-    font-size: 14px;
-    margin: .6rem;
+    font-size: 15px;
+    margin: .5rem;
 }
 
 @media only screen and (min-width: 36rem) {
