--- a/WDDAssignments/lesson9/css/small.css
+++ b/WDDAssignments/lesson9/css/small.css
@@ -3,26 +3,19 @@ html {-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%;}
 * { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;}  /* This wildcard applies to all elements ensuring a box layout model */
 
 body {
-  background-color: azure;
-  padding: 0;
-  margin: 0;
+    font-size: 16px;
+    font-family: "roboto", sans-serif;
+    background-color: azure;
 }
 
 header {    
     background-color: azure;
-    padding: 10px 0;
+    padding: .5rem 2%;
     display: flex;
     align-items: center;
     justify-content: center;
     font-family: "roboto", sans-serif;
-    width: 100%;
 }
-
-header img {
-    width: 125px;
-    height: auto;
-    }
-
 .headings {
     display: flex;
     flex-direction: column;
@@ -31,8 +24,9 @@ header img {
 .headings h1 {
     font-family: Verdana, sans-serif;
     font-weight: bold;
-    font-size: 2rem;
+    font-size: 20px;
     margin: 0 0 0 15px;
+    margin-left: 15px;
     color: rgb(17, 17, 155);
 }
 
@@ -40,8 +34,8 @@ header img {
     font-style: italic;
     color: rgb(17, 17, 155);
     letter-spacing: 0.5pt;
-    margin-left: 30px;
-    font-size: 1.5rem;
+    margin-left: 15px;
+    font-size: 15px;
 }
 
 #plannedEvent {    
@@ -51,52 +45,99 @@ header img {
     padding: 8px;
     text-align: center;
     font-family: Verdana, sans-serif;
+    font-style: italic;
+}
+
+nav button {
+    margin: .2rem 2%;
+    background-color: transparent;
+    border: none;
+    font-size: 1.6rem;
+    color:rgb(26, 250, 26);
 }
 
 nav {
     font-family: Verdana, sans-serif;
     margin: -15px auto;
     background-color: rgb(26, 250, 26);
+    text-align: center;
 }
 
-nav button {
-    margin: -15px auto;
-    background-color: transparent;
-}
-
-.navigation {
-    list-style: none;
+nav ul {
+    list-style-type: none;
     padding: 0;
+    margin: 0px;
+    overflow: hidden;
 
 }
 
-.navigation li {
-    display: block;
-}
-
-.navigation li:first-child {
-    display: block;
-  }
-  
-  .navigation a {
+nav ul li a{
     display: block;
     color: rgb(17, 17, 155);
-    padding: 0.75rem;
+    padding: .5rem 0;
     text-align: center;
     text-decoration: none;
     font-family: "Verdana", sans-serif;
-    font-size: 1.3rem;
+    font-size: .8rem;
   }
 
-  .navigation a:hover {
+ nav ul li a:hover {
     color: rgb(17, 17, 155);
     background-color: rgb(26, 223, 26);
     font-weight: 900;
   }
 
-  .responsive li {
-    display: block;
-  }
+nav ul.hide {
+    display: none;
+}
+
+nav ul li.active a {
+    background-color: rgb(26, 223, 26);
+    color: rgb(17, 17, 155);
+
+}
+
+.gallery {
+    margin: 0em;
+    display: grid;
+    justify-items: center;
+    grid-gap: 5px;
+    grid-template-columns: repeat(1, 1fr);
+    width: 100%;
+}
+
+.gallery figure img {
+    width: 100%;
+    padding: 5px;
+    border: solid 2px rgb(17, 17, 155);
+}
+
+}
+.gallery figure img[data-src] {
+    filter: blur(0.2em);
+ }
+ .gallery figure figcaption {
+     background-color: rgb(17, 17, 155);
+     margin: auto;
+     
+ }
+
+ main {
+    padding: 1rem 2%;
+    max-width:820px;
+    margin:0 auto;
+}
+main h1 {
+    text-align: center;
+}
+main h2 {
+    text-align: center;
+}
+picture {
+    width: 100%;
+}
+
+
 
 h2 {
     color: rgb(17, 17, 155);
@@ -229,13 +270,35 @@ p img {
     margin-top: 15px;
 }
 
+.townname {
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: repeat(1, 1fr);
+    justify-content: center;
+    margin: 1rem auto;      
+}
+
+.homepic img {
+    width: 90%;
+    height: auto;
+    border: 2px solid rgb(17, 17, 155);
+    border-radius: 15px;
+    margin: 5px;
+    align-self: center;
+}
+
 
 footer {
     background-color: rgb(17, 17, 155);
     color:  rgb(9, 207, 9);
-    margin: 15px auto;
-    padding: 5px;
-    max-width: 90%;
+    padding: .5rem 2%;
     font-family: "Verdana", sans-serif;
     text-align: center;
+    clear: both;
+}
+
+.clearfix:after {
+    content: "";
+    display: table;
+    clear: both;
 }
