--- a/WDDAssignments/lesson-11/css/large.css
+++ b/WDDAssignments/lesson-11/css/large.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 64rem) {
+@media only screen and (min-width: 1000px) {
     .headings h1 {
         font-size: 3rem;
     }
