--- a/WDDAssignments/lesson-11/css/medium.css
+++ b/WDDAssignments/lesson-11/css/medium.css
@@ -1,4 +1,4 @@
-@media only screen and (min-width: 35em) {
+@media only screen and (min-width: 500px) {
 
     /* Only CSS write declarations that need to be changed. Do not duplicated declarations that are already established in the main.css */
     
