--- a/WDDAssignments/Final_Project/CSS/small.css
+++ b/WDDAssignments/Final_Project/CSS/small.css
@@ -132,7 +132,7 @@ form label.sbs {
 }
 form input.submitBtn {
     border: none;
-    background-color: #FFF000;
+    background-color: #F09900;
     color: white;
     border-radius: 1rem;
     padding: .75rem 1.5rem;
